tests/fixtures/valid/while_assign_counter.torel
unit fixtures.while_assign_counter;

export proc main() -> Int32 {
    slot answer: Int32 = 0;

    while answer < 2 {
        answer = answer + 1;
    }

    answer
}
